; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_mmu.c_kvm_flush_remote_tlbs_with_range.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_mmu.c_kvm_flush_remote_tlbs_with_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.kvm*, %struct.kvm_tlb_range*)* }
%struct.kvm = type { i32 }
%struct.kvm_tlb_range = type { i32 }

@ENOTSUPP = common dso_local global i32 0, align 4
@kvm_x86_ops = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kvm*, %struct.kvm_tlb_range*)* @kvm_flush_remote_tlbs_with_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kvm_flush_remote_tlbs_with_range(%struct.kvm* %0, %struct.kvm_tlb_range* %1) #0 {
  %3 = alloca %struct.kvm*, align 8
  %4 = alloca %struct.kvm_tlb_range*, align 8
  %5 = alloca i32, align 4
  store %struct.kvm* %0, %struct.kvm** %3, align 8
  store %struct.kvm_tlb_range* %1, %struct.kvm_tlb_range** %4, align 8
  %6 = load i32, i32* @ENOTSUPP, align 4
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %5, align 4
  %8 = load %struct.kvm_tlb_range*, %struct.kvm_tlb_range** %4, align 8
  %9 = icmp ne %struct.kvm_tlb_range* %8, null
  br i1 %9, label %10, label %22

10:                                               ; preds = %2
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @kvm_x86_ops, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32 (%struct.kvm*, %struct.kvm_tlb_range*)*, i32 (%struct.kvm*, %struct.kvm_tlb_range*)** %12, align 8
  %14 = icmp ne i32 (%struct.kvm*, %struct.kvm_tlb_range*)* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %10
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @kvm_x86_ops, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32 (%struct.kvm*, %struct.kvm_tlb_range*)*, i32 (%struct.kvm*, %struct.kvm_tlb_range*)** %17, align 8
  %19 = load %struct.kvm*, %struct.kvm** %3, align 8
  %20 = load %struct.kvm_tlb_range*, %struct.kvm_tlb_range** %4, align 8
  %21 = call i32 %18(%struct.kvm* %19, %struct.kvm_tlb_range* %20)
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %15, %10, %2
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = load %struct.kvm*, %struct.kvm** %3, align 8
  %27 = call i32 @kvm_flush_remote_tlbs(%struct.kvm* %26)
  br label %28

28:                                               ; preds = %25, %22
  ret void
}

declare dso_local i32 @kvm_flush_remote_tlbs(%struct.kvm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
